# PB_toy

./: .gitignore  MANIFEST.in  PB_toy_results_20260721.md  PB_toy_results_20260723_noisy100k_eval100k_200k_csh.md  README.md  pyproject.toml
.github/workflows/: toy-examples-ci.yml
agents/: HYPERPARAMETERS.md  __init__.py  bc.py  critic.py  dqc.py  dynamics.py  flax_utils.py  hiql.py  networks.py  rendering.py  tr_hiql.py  trl.py
agents/pathbridger/: __init__.py  critic.py  dynamics.py
agents/pathbridger/utils/: __init__.py  goal_representation.py
car_parking/: DATASET_DESIGN.md  README.md  __init__.py  datasets.py  env.py  generate_dataset.py  hybrid_astar.py  parking_policy.py  render_demos.py  render_expert_demos.py  train.py  validate_expert.py
car_parking/demo/: README.md
car_parking/tests/: __init__.py  test_dataset.py  test_env.py  test_expert.py  test_generate_dataset.py
car_race/: README.md  __init__.py  datasets.py  env.py  generate_dataset.py  train.py
car_race/tests/: test_dataset.py  test_env.py
concept/: codes.py  codes_nn.py  codes_numerical.py  envs.py  fig_shared.py  paths.py  scene.py
concept/tests/: __init__.py  test_geometry.py
hazard_bridge/: README.md  run_experiment.py
hazard_bridge/outputs/: learned_models.npz  metrics.json  toy_hazard_dataset.json
hazard_bridge/tests/: test_pipeline.py
hazard_bridge/toy_pathbridger/: __init__.py  dataset.py  env.py  learning.py  plot_svg.py
hazard_env/: HYPERPARAMETERS.md  __init__.py  env.py  generate_navigate.py  plot_coverage.py  plot_learning_curves.py  plot_tasks.py  reeval_checkpoints.py  run_sweep_1k.py  train.py
hazard_env/agents/: __init__.py  bc.py  bridge.py  critic.py  dataset.py  dqc.py  dynamics.py  flax_utils.py  hiql.py  networks.py  pbf.py  pbg.py  tr_hiql.py  train.py  trl.py
hazard_env/datasets/: hazard2d-navigate-val.npz  hazard2d-navigate.npz  hazard_anti_grav_navigate_100k.npz  hazard_anti_grav_navigate_100k_val.npz  hazard_anti_grav_navigate_10k.npz  hazard_anti_grav_navigate_10k_val.npz  hazard_anti_grav_navigate_1k.npz  hazard_anti_grav_navigate_1k_val.npz  hazard_anti_grav_noisy_100k.npz  hazard_anti_grav_noisy_100k_val.npz  hazard_anti_grav_noisy_10k.npz  hazard_anti_grav_noisy_10k_val.npz  hazard_anti_grav_noisy_1k.npz  hazard_anti_grav_noisy_1k_val.npz  hazard_anti_grav_random_100k.npz  hazard_anti_grav_random_100k_val.npz  hazard_anti_grav_random_10k.npz  hazard_anti_grav_random_10k_val.npz  hazard_anti_grav_random_1k.npz  hazard_anti_grav_random_1k_val.npz  hazard_grav_navigate_100k.npz  hazard_grav_navigate_100k_val.npz  hazard_grav_navigate_10k.npz  hazard_grav_navigate_10k_val.npz  hazard_grav_navigate_1k.npz  hazard_grav_navigate_1k_val.npz  hazard_grav_noisy_100k.npz  hazard_grav_noisy_100k_val.npz  hazard_grav_noisy_10k.npz  hazard_grav_noisy_10k_val.npz  hazard_grav_noisy_1k.npz  hazard_grav_noisy_1k_val.npz  hazard_grav_random_100k.npz  hazard_grav_random_100k_val.npz  hazard_grav_random_10k.npz  hazard_grav_random_10k_val.npz  hazard_grav_random_1k.npz  hazard_grav_random_1k_val.npz  hazard_plain_navigate_100k.npz  hazard_plain_navigate_100k_val.npz  (+16 more)
hazard_env/tests/: __init__.py  test_env.py
hazard_env/utils/: __init__.py  datasets.py  networks.py  rendering.py
scripts/: backup_pb_toy_to_github.sh  collect_renders.sh  eval_pb_1k_nt_sweep.py  eval_pending_checkpoints_cpu.py  eval_swingby_cpu.py  export_results_to_pblogs.py  launch_noisy_200k_csh_server.sh  launch_retry_failed_noisy_200k_csh.sh  make_learning_curves.py  make_scoreboard.py  make_scoreboard_and_learning_curves.py  plan_matrix.sh  plot_noisy100k_learning_curves.py  prepare_car_swingby_datasets.sh  queue_lap_retrain_after.sh  queue_lap_then_swingby.sh  regenerate_datasets_current.py  render_matrix.sh  retry_anti_grav_remain_after_slots.sh  run_anti_grav_remain_10k_k10.sh  run_car_parking_datasets.sh  run_matrix.sh  run_pb_1k_nt_sweep.sh  run_queue_100k_k10.sh  run_queue_10k_lap248.sh  run_queue_noisy_200k.sh  run_queue_noisy_200k_csh.sh  run_queue_post_100k.sh  run_train_10k_k10.sh  run_train_example.sh  sync_pb_toy_to_pblogs.sh  sync_pb_toy_to_pblogs_csh.sh  update_noisy100k_results_md.py  update_pb_toy_results_md.py  watch_and_render.sh  watch_scoreboard.sh
swingby/: __init__.py  config.py  datasets.py  env.py  generate_dataset.py  orbital_swingby_env.py  policies.py  render.py  train.py
swingby/tests/: __init__.py  test_dataset.py  test_env.py
